1999-11-10  Akim Demaille  <akim@epita.fr>

	Let Autoconf use autoconf's `--install'.

	* m4/Makefile.am: New file.
	* m4/init.am: New file, required by Automake.
	* m4/missing.am: Likewise.
	* m4/sanity.am: Likewise.
	* aclocal.m4: Include them.
	* configure.in (AC_OUTPUT): Added m4/Makefile.

1999-11-10  Akim Demaille  <akim@epita.fr>

	Make autoconf support --install.

	* autoconf.sh (task install): New task.  Extract the set of
	auxiliary m4 files a configure.in depends upon.  Install links
	from library files to the local dir so that the packages depends
	only on local extensions.  Check that the user includes exactly
	the files she needs.

1999-11-10  Akim Demaille  <akim@epita.fr>

	Require GNU m4 1.4 (well 1.3 in fact).

	Because we are ready to handle the case where there are no frozen
	files, we *have* to pass a -I, which is dangerous in conjunction
	with the silent including of `aclocal.m4': you may include things
	that were not expected.  Since anyway handling pre 1.3 complicates
	the task, just require an m4 which supports reloading of frozen
	files.

	* acspecific.m4 (AC_PROG_GNU_M4): Check for --reload.
	* autoconf.sh: Likewise
	* autoheader.sh: Likewise.
	* configure.in: Explicitly state the m4 version you want.

1999-11-10  Akim Demaille  <akim@epita.fr>

	No need for foo="`bar`", foo=`bar` is fine.
	Simplify ${foo} and ${1} into $foo and $1.

	* acgeneral.m4 (ac_LF_and_DOT): Remove the double quotes.
	* acspecific.m4 (AC_PROG_CC_C_O, AC_PROG_F77_C_O): Likewise.
	* autoconf.sh: Likewise.
	* autoheader.sh: Likewise.
	* autoreconf.sh: Likewise.
	* autoupdate.sh: Likewise.
	* ifnames.sh: Remove all the code and messages related to
	AC_MACRODIR, since ifnames is not related to macros in anyway.

1999-11-10  Akim Demaille  <akim@epita.fr>

	New version of AC_INCLUDE, which does not glob, nor rely upon the
	shell.  Add AC_INCLUDES too.  Help tracking multiple inclusions.

	* acgeneral.m4 (m4_errprint, m4_warn, m4_fatal): New macros,