@@ -1,5 +1,13 @@
 1999-11-10  Akim Demaille  <akim@epita.fr>
 
+	* autoconf.sh: Formatting changes.
+	Removed development junk.
+	* acspecific.m4: Formatting changes.
+	* autoconf.m4: Likewise.
+	* autoheader.m4: Likewise.
+
+1999-11-10  Akim Demaille  <akim@epita.fr>
+
 	Let Autoconf use autoconf's `--install'.
 
 	* m4/Makefile.am: New file.
